--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Resume Tailor</title>
+</head>
+<body class="bg-gray-100">
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+  <!-- latex.js library -->
+  <script src="https://cdn.jsdelivr.net/npm/latex.js/dist/latex.min.js"></script>
+</body>
 </html>
